--- a/class-transformer-presentation/package.json
+++ b/class-transformer-presentation/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "slidev build",
     "dev": "slidev --open",
+    "present": "slidev --open",
     "export": "slidev export",
     "export-pdf": "slidev export --format pdf",
     "export-png": "slidev export --format png",
